Added Prediction Modeling

--- a/PHP.Sales.Web/Views/Report/Index.cshtml
+++ b/PHP.Sales.Web/Views/Report/Index.cshtml
@@ -10,6 +10,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@Html.ActionLink("Prediction Reports", "Prediction")
 <table class="table">
     <tr>
         <th>
