--- a/PHP.Sales.Web/Views/Report/Index.cshtml
+++ b/PHP.Sales.Web/Views/Report/Index.cshtml
@@ -40,8 +40,8 @@
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.ID }) | 
-            @*<input id="ExportCSV" type="submit" value="Export CSV">*@
-            @Html.ActionLink("Export CSV", "ExportCSV", new { id=item.ID })
+            @Html.ActionLink("Export CSV", "ExportCSV", new { id=item.ID , sel = 2})
+            @* | @Html.ActionLink("Export CSV", "ExportCSV", new { id = item.ID, sel = 1 })*@
             @*@Html.ActionLink("Download File", "DownloadFile", new { id=item.ID})
             <asp:Button ID="btnDownload" runat="server" Text="Download File" OnClick="btnDownload_Click" />*@
         </td>
